--- a/package.json
+++ b/package.json
@@ -3,13 +3,25 @@
   "private": true,
   "dependencies": {
     "@babel/preset-react": "^7.26.3",
+    "@emotion/hash": "^0.9.2",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@rails/webpacker": "5.4.4",
+    "antd": "^5.22.5",
+    "axios": "1.3.4",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+    "dotenv": "^16.4.7",
+    "jquery": "^3.7.1",
+    "less": "^4.2.1",
+    "less-loader": "^12.2.0",
+    "lucide-react": "^0.468.0",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.0.2",
+    "react-select": "^5.9.0",
+    "react-toastify": "8.0.0",
     "react_ujs": "^3.2.1",
     "redux": "^5.0.1",
     "webpack": "^4.46.0",
@@ -19,7 +31,11 @@
     "@babel/core": "^7.26.0",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/preset-env": "^7.26.0",
+    "@emotion/babel-plugin": "^11.13.5",
     "babel-loader": "^8.0.0",
     "webpack-dev-server": "^3"
+  },
+  "resolutions": {
+    "@emotion/hash": "latest"
   }
 }
