--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jquery": "^3.7.1",
     "less": "^4.2.1",
     "less-loader": "^12.2.0",
+    "lottie-react": "^2.4.0",
     "lucide-react": "^0.468.0",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
